fixed overlapping divs

--- a/google.css
+++ b/google.css
@@ -6,9 +6,18 @@ a {
 	text-decoration: none;
 }
 
+a:hover {
+	text-decoration: underline;
+}
+
+header {
+	height: 50px;
+}
+
 #top-menu {
 	float: right;
 	margin: 5px 16px 0 0;
+	clear: right;
 }
 
 ul {
@@ -23,7 +32,7 @@ li {
 	margin: 0 5px 0 5px;
 }
 
-li a img {
+li img {
 	vertical-align: middle;
 	margin-bottom: 2px;
 }
@@ -40,16 +49,12 @@ li a img {
 	margin-left: 8px;
 }
 
-/*#login-button:hover{
+#login-button:hover{
 	box-shadow: 0 1px 0 rgba(0,0,0,.15);
-}*/
-
-header a {
-	color: #262626;
 }
 
-header a:hover {
-	text-decoration: underline;
+#top-menu a {
+	color: #262626;
 }
 
 #wrapper {
@@ -64,7 +69,7 @@ header a:hover {
 	text-align: left;
 	display: block;
 	padding: 200px;
-	padding-top: 192px;
+	padding-top: 142px;
 }
 
 #logo {
@@ -142,10 +147,6 @@ footer {
 
 footer a {
 	color: #666666;
-}
-
-footer a:hover {
-	text-decoration: underline;
 }
 
 footer a:active {
